<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LessWalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="BackString">Back</string>
    <string name="MyHomeString">My Home</string>
    <string name="CallString">Call</string>
    <string name="title_activity_main">Lesswalk</string>
    <string name="title">Title:</string>
    <string name="done">Done</string>
    <string name="response_text"><font style='text-weight:bold;color:green;'>yesss</font> sir!</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="title_activity_contact_profile">ContactProfile</string>
    <string name="st_registration_set_number">To get Started, Please Entrer your Phone Number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="waze_package_name">com.waze</string>
    <string name="googlemap_package_name">com.google.android.gms.maps</string>
    <string name="igo_package_name">com.my.m3tech.igo.nextgen</string>
    <string name="tomtom_package_name">com.tomtom.gplay.navapp</string>
    <string name="navigo_package_name">com.navigon.android</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_lesswalk_settings">LesswalkSettings</string>
    <string name="title_activity_map">Map</string>

</resources>
