<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_1_1x"
    android:weightSum="13"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/bc_title_color"
        android:weightSum="3"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/BackString"
            android:textColor="@android:color/white"
            android:background="@color/bc_title_color"
            android:id="@+id/bc_back_button"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/MyHomeString"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:background="@color/bc_title_color"
            android:id="@+id/button2"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/CallString"
            android:textColor="@android:color/white"
            android:background="@color/bc_title_color"
            android:id="@+id/bc_right_button"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bc_gl_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        />

</LinearLayout>
