<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lesswalk.LesswalkSettings"
    android:background="@drawable/background_1_1x"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile_header_2x"
            android:scaleType="fitStart"
            android:contentDescription="@string/hello_world"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="70dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:src="@drawable/settings_snapshot"
                    android:scaleType="fitCenter"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="Your Name Goes HERE!"
                    android:textSize="24dp"
                    android:gravity="center"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setting_navigation_title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text=" Default Navigator "
                        android:textColor="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/setting_navigation_title1"
                        android:background="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/setting_navigation_title1"
                        android:background="#FFFFFF" />
                </RelativeLayout>

                <com.lesswalk.views.SettingsNavigationItem
                    android:id="@+id/settings_item_waze"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Waze"
                    android:description="@string/waze_package_name"
                    />

                <com.lesswalk.views.SettingsNavigationItem
                    android:id="@+id/settings_item_google_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Google Map"
                    android:description="@string/googlemap_package_name"
                    />

                <com.lesswalk.views.SettingsNavigationItem
                    android:id="@+id/settings_item_igo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="iGo"
                    android:description="@string/igo_package_name"
                    />

                <com.lesswalk.views.SettingsNavigationItem
                    android:id="@+id/settings_item_tomtom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TomTom"
                    android:description="@string/tomtom_package_name"
                    />

                <com.lesswalk.views.SettingsNavigationItem
                    android:id="@+id/settings_item_navigon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Navigon"
                    android:description="@string/navigo_package_name"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setting_navigation_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text=" More settings "
                        android:textColor="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/setting_navigation_title2"
                        android:background="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/setting_navigation_title2"
                        android:background="#FFFFFF" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <com.lesswalk.views.SettingsOnOffItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Show Hidden Contacts"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setting_navigation_title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text=" Fatal actions "
                        android:textColor="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/setting_navigation_title3"
                        android:background="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/setting_navigation_title3"
                        android:background="#FFFFFF" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <Button
                    android:id="@+id/settings_delete_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete My account"
                    android:background="@drawable/rounded_red"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setting_navigation_title4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text=" About "
                        android:textColor="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/setting_navigation_title4"
                        android:background="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/setting_navigation_title4"
                        android:background="#FFFFFF" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Version: 1.0.6 (Build:24)"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

            </LinearLayout>

    </RelativeLayout>

</ScrollView>
